--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="assets/css/emotionalsupportpizza.css">
+        <link rel="stylesheet" href="assets/css/site.css">
+        <!-- hack-font via cdnjs-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hack-font/3.3.0/web/hack.min.css" integrity="sha512-XgCw4Srl8lC1ECwcaHwAU0WnxQwHkqmInzg9wJLtGB7DRuMaXPuK2k9WJ2AwRDGdrgK9eJpZl2hUlLi2WQssmw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- Javascript here -->
         <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script defer src="https://kit.fontawesome.com/2ae48a9dcd.js" crossorigin="anonymous"></script>
-        <script defer src="assets/js/emotionalsupportpizza.js"></script>
-        <title>Emotional Support Pizza</title>
+        <script defer src="assets/js/site.js"></script>
+        <title>I am MrCupp</title>
     </head>
     <body>
         <!-- Site Container-->
@@ -21,11 +23,11 @@
                 <div class="col text-center justify-content-start site-header-text">
                     Sacramento, CA
                 </div>
-                <div class="col text-center">
-                    <img src="assets/img/ESP-logo-Horizontal.png" class="img-fluid logo-footer" alt="Emotional Support Pizza">
+                <div class="col text-center site-header-text">
+                    IamMrCupp 
                 </div>
                 <div class="col text-center justify-content-end site-header-text">
-                    Coming Soon!
+                    Est. 1981
                 </div>
             </div>
             <!-- Navigation Bar Here -->
@@ -36,8 +38,29 @@
             -->
 
             <!-- Site Content Lives Here -->
-            <div class="container-fluid site-content text-center bg-light">
-                <img src="assets/img/ESP-Logo-Main.png" class="img-fluid logo-main" alt="Emotional Support Pizza">
+            <div class="container-fluid site-content p-4 text-center bg-light site-container-text">
+                <!-- Shill For Yourself Here -->
+                <div class="row">
+                    <div class="col text-center">
+                        <h4>ls -R | grep ":$" | sed -e 's/:$//' -e 's/[^-][^\/]*\//--/g' -e 's/^/ /' -e 's/-/|/'</h4>
+                        <p>
+                            Thanks for stopping in.<br />
+                            Expect many updates to this site over the coming weeks and months.<br />
+                            <br />
+                            In the meantime, please checkout the following projects I have developed in my spare time.
+                        </p>
+                    </div>
+                </div>
+                <!-- Shill For ESP Here -->
+                <div class="clearfix">
+                    <div class="row text-center">
+                        <img src="assets/img/ESP-Logo-Main.png" class="img-fluid esp-logo" alt="Emotional Support Pizza">
+                    </div>
+                </div>
+                <!-- Shill for TNS Here -->
+                <div class="row text-center">
+                    Tech-Noid Systems Here
+                </div>
             </div>
 
             <!-- Footer -->
@@ -47,15 +70,15 @@
                     <!-- Section: Social media -->
                     <section class="mb-4">
                         <!-- Facebook -->
-                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-facebook" href="https://www.facebook.com/EmotionalSupportPizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow us on Facebook">
+                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-facebook" href="https://www.facebook.com/EmotionalSupportPizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on Facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <!-- Instagram -->
-                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-instagram" href="https://www.instagram.com/emotionalsupportpizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow us on Instagram">
+                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-instagram" href="https://www.instagram.com/iammrcupp/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <!-- Linkedin -->
-                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-linkedin" href="https://www.linkedin.com/company/emotional-support-pizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow us on LinkedIn">
+                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-linkedin" href="https://www.linkedin.com/in/mrcupp/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </section>
@@ -64,8 +87,8 @@
                 <!-- End Grid container -->
                 <!-- Copyright -->
                 <div class="text-center p-4 text-muted">
-                     © 2021 Copyright
-                    <a href="https://emotionalsupportpizza.com/">Emotional Support Pizza LLC</a>
+                    © 2021 Copyright
+                    <a href="https://mrcupp.com/">IamMrCupp</a>
                 </div>
                 <!-- End Copyright -->
             </footer>
