--- a/app/index.html
+++ b/app/index.html
@@ -16,85 +16,147 @@
         <title>I am MrCupp</title>
     </head>
     <body>
-        <!-- Site Container-->
-        <div class="container-fluid site-container bg-light">
-            <!-- Top Bar Here -- Location, Logo, Hours-->
-            <div class="row site-header align-items-center bg-light">
-                <div class="col text-center justify-content-start site-header-text">
-                    Sacramento, CA
-                </div>
-                <div class="col text-center site-header-text">
-                    IamMrCupp 
-                </div>
-                <div class="col text-center justify-content-end site-header-text">
-                    Est. 1981
-                </div>
-            </div>
-            <!-- Navigation Bar Here -->
-            <!--
-            <div>
 
-            </div>
-            -->
-
-            <!-- Site Content Lives Here -->
-            <div class="container-fluid site-content p-4 text-center bg-light site-container-text">
-                <!-- Shill For Yourself Here -->
-                <div class="row">
-                    <div class="col text-center">
-                        <h4>ls -R | grep ":$" | sed -e 's/:$//' -e 's/[^-][^\/]*\//--/g' -e 's/^/ /' -e 's/-/|/'</h4>
-                        <p>
-                            Thanks for stopping in.<br />
-                            Expect many updates to this site over the coming weeks and months.<br />
-                            <br />
-                            In the meantime, please checkout the following projects I have developed in my spare time.
-                        </p>
-                    </div>
-                </div>
-                <!-- Shill For ESP Here -->
-                <div class="clearfix">
-                    <div class="row text-center">
-                        <img src="assets/img/ESP-Logo-Main.png" class="img-fluid esp-logo" alt="Emotional Support Pizza">
-                    </div>
-                </div>
-                <!-- Shill for TNS Here -->
-                <div class="row text-center">
-                    Tech-Noid Systems Here
-                </div>
-            </div>
-
-            <!-- Footer -->
-            <footer class="footer text-center text-lg-start bg-light">
-                <!-- Grid container -->
-                <div class="container p-4 text-center">
-                    <!-- Section: Social media -->
-                    <section class="mb-4">
-                        <!-- Facebook -->
-                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-facebook" href="https://www.facebook.com/EmotionalSupportPizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on Facebook">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <!-- Instagram -->
-                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-instagram" href="https://www.instagram.com/iammrcupp/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <!-- Linkedin -->
-                        <a class="btn btn-outline-light btn-floating m-1 social-button social-button-linkedin" href="https://www.linkedin.com/in/mrcupp/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on LinkedIn">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </section>
-                    <!-- End Section: Social media -->
-                </div>
-                <!-- End Grid container -->
-                <!-- Copyright -->
-                <div class="text-center p-4 text-muted">
-                    © 2021 Copyright
-                    <a href="https://mrcupp.com/">IamMrCupp</a>
-                </div>
-                <!-- End Copyright -->
-            </footer>
-            <!-- End Footer -->
-
-        <!-- End Site Container-->
+<!-- Site Container-->
+<div class="container-fluid site-container bg-light">
+    <!-- Top Bar Here -->
+    <header>
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
+        <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-center site-header-text">
+            <p></p>
         </div>
+        <!-- Section: Social media -->
+        <div class="col-12 col-md-auto mb-2 justify-content-center mb-md-0 text-center site-header-text h4">
+            <p>IamMrCupp</p> 
+        </div>
+        <!-- End Section: Social media -->
+        <div class="col-md-3 text-end justify-content-end site-header-text">
+            <p></p>
+        </div>
+    </div>  
+    
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between border-bottom">
+        <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-center site-header-text">
+            <p>Sacramento, CA</p>
+        </div>
+        <div class="d-flex flex-wrap align-items-center col-12 col-md-auto mb-2 justify-content-center mb-md-0 text-center site-header-text">
+            <p></p>
+        </div>
+        <div class="col-md-3 text-end text-center site-header-text">
+            <p>Est. 1981</p>
+        </div>
+    </div>  
+    </header>
+    <!-- Navigation Bar Here -->
+    <!-- End Navigation Bar Here -->
+    <!-- Site Content Lives Here -->
+    <main>
+        <div class="container-fluid site-content p-4 text-center bg-light site-container-text">
+            <!-- Shill For Yourself Here -->
+            <div class="row">
+                <div class="col text-center">
+                    <p>
+                        Thanks for stopping in.<br />
+                        Expect many updates to this site over the coming weeks and months.<br />
+                        <br /><br /><br />
+                        I can be found on the following social platforms:<br>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                            <!-- Instagram -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-instagram" href="https://www.instagram.com/iammrcupp/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on Instagram">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <!-- Linkedin -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-linkedin" href="https://www.linkedin.com/in/mrcupp/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <!-- Github -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-github" href="https://github.com/IamMrCupp/" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <!-- Soundcloud -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-soundcloud" href="https://soundcloud.com/mrcupp" target="_blank" role="button" data-toggle="tooltip" title="Follow Me on Soundcloud">
+                                <i class="fab fa-soundcloud"></i>
+                            </a>
+                        </div>
+                        <br><br>
+                        In the meantime, please checkout the following projects I have developed in my spare time.
+                    </p>
+                </div>
+            </div>
+            <!-- Shill For ESP Here -->
+            <div class="container col-xxl-8 px-4 py-5">
+                <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                    <div class="col-10 col-sm-8 col-lg-6">
+                        <a href="https://emotionalsupportpizza.com/" target="_blank" class="text-dark text-decoration-none">
+                            <img src="assets/img/ESP-Logo-Main.png" class="d-block mx-lg-auto img-fluid" alt="Emotional Support Pizza Logo" width="400" height="400" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a href="https://emotionalsupportpizza.com/" target="_blank" class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Emotional Support Pizza</a>
+                        <p class="lead">"Fire Baked Sourdough Pizza"
+                            <br><br>
+                            Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.<br>
+                            Container images are created automatically via CircleCI and are built utilizing BuildKit for multiarch containters.<br>
+                            The hosting infrastructure is self-built.  We're using ubuntu, kubernetes, containerd, cert-manager, Let's Encrypt SSL, nginx and HAproxy for the bulk of things.
+                        </p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                            <!-- Facebook -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-facebook" href="https://www.facebook.com/EmotionalSupportPizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow ESP on Facebook">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <!-- Instagram -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-instagram" href="https://www.instagram.com/emotionalsupportpizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow ESP on Instagram">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <!-- Linkedin -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-linkedin" href="https://www.linkedin.com/company/emotional-support-pizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow ESP on LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Shill for TNS Here -->
+            <div class="container col-xxl-8 px-4 py-5">
+                <div class="row flex-lg-row align-items-center g-5 py-5">
+                    <div class="col-10 col-sm-8 col-lg-6">
+                        <img src="assets/img/TechnoidSystemsGrayscale.png" class="d-block mx-lg-auto img-fluid" alt="Tech-Noid Systems Logo" width="400" height="400" loading="lazy">
+                    </div>
+                    <div class="col-lg-6">
+                        <h1 class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</h1>
+                        <p class="lead">"Bass Music - 24x7"
+                            <br><br>
+                            Streaming platform uses Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of js and PHP on the backend.<br>
+                            Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.<br>
+                            Container images are created automatically via CircleCI and are built utilizing BuildKit for multiarch containters.<br>
+                            The hosting infrastructure is self-built.  We're using ubuntu, kubernetes, containerd, cert-manager, Let's Encrypt SSL, nginx and HAproxy for the bulk of things.
+                        </p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                            <!-- Facebook -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-facebook" href="https://www.facebook.com/TechNoidSystems/" target="_blank" role="button" data-toggle="tooltip" title="Follow TNS on Facebook">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <!-- Github -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-github" href="https://github.com/Tech-Noid-Systems/" target="_blank" role="button" data-toggle="tooltip" title="Follow TNS on GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Footer -->
+    <footer class="footer text-center text-lg-start bg-light">
+        <!-- Copyright -->
+        <div class="text-center p-4 text-muted">
+            © 2021 Copyright
+            <a href="https://mrcupp.com/">IamMrCupp</a>
+        </div>
+        <!-- End Copyright -->
+    </footer>
+    <!-- End Footer -->
+<!-- End Site Container-->
+</div>
     </body>
 </html>
