more site updates
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/app/index.html
+++ b/app/index.html
@@ -19,22 +19,18 @@
 
 <!-- Site Container-->
 <div class="container-fluid site-container bg-light">
-    <!-- Top Bar Here -->
     <header>
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
         <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-center site-header-text">
             <p></p>
         </div>
-        <!-- Section: Social media -->
         <div class="col-12 col-md-auto mb-2 justify-content-center mb-md-0 text-center site-header-text h4">
             <p>IamMrCupp</p> 
         </div>
-        <!-- End Section: Social media -->
         <div class="col-md-3 text-end justify-content-end site-header-text">
             <p></p>
         </div>
     </div>  
-    
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between border-bottom">
         <div class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-center site-header-text">
             <p>Sacramento, CA</p>
@@ -42,7 +38,7 @@
         <div class="d-flex flex-wrap align-items-center col-12 col-md-auto mb-2 justify-content-center mb-md-0 text-center site-header-text">
             <p></p>
         </div>
-        <div class="col-md-3 text-end text-center site-header-text">
+        <div class="col-md-3 text-end site-header-text">
             <p>Est. 1981</p>
         </div>
     </div>  
@@ -54,7 +50,7 @@
         <div class="container-fluid site-content p-4 text-center bg-light site-container-text">
             <!-- Shill For Yourself Here -->
             <div class="row">
-                <div class="col text-center">
+                <div class="container col-xxl-8 px-4 py-5 border-bottom ">
                     <p>
                         Thanks for stopping in.<br />
                         Expect many updates to this site over the coming weeks and months.<br />
@@ -84,7 +80,7 @@
                 </div>
             </div>
             <!-- Shill For ESP Here -->
-            <div class="container col-xxl-8 px-4 py-5">
+            <div class="container col-xxl-8 px-4 py-5 border-bottom">
                 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
                         <a href="https://emotionalsupportpizza.com/" target="_blank" class="text-dark text-decoration-none">
@@ -93,12 +89,12 @@
                     </div>
                     <div class="col-lg-6">
                         <a href="https://emotionalsupportpizza.com/" target="_blank" class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Emotional Support Pizza</a>
-                        <p class="lead">"Fire Baked Sourdough Pizza"
-                            <br><br>
-                            Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.<br>
-                            Container images are created automatically via CircleCI and are built utilizing BuildKit for multiarch containters.<br>
-                            The hosting infrastructure is self-built.  We're using ubuntu, kubernetes, containerd, cert-manager, Let's Encrypt SSL, nginx and HAproxy for the bulk of things.
-                        </p>
+                        <p class="lead">"Fire Baked Sourdough Pizza"</p>
+                        <ul class="text-start"> 
+                            <li>Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.</li>
+                            <li>Container images created via CircleCI and are built utilizing BuildKit for multiarch containters.</li>
+                            <li>The hosting infrastructure is self-built: Ubuntu LTS, kubernetes, containerd, cert-manager, Let's Encrypt SSL (auto-generating), nginx-ingress and HAproxy for the bulk of things.</li>
+                        </ul>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                             <!-- Facebook -->
                             <a class="btn btn-outline-light btn-floating s-1 social-button social-button-facebook" href="https://www.facebook.com/EmotionalSupportPizza/" target="_blank" role="button" data-toggle="tooltip" title="Follow ESP on Facebook">
@@ -120,17 +116,17 @@
             <div class="container col-xxl-8 px-4 py-5">
                 <div class="row flex-lg-row align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="assets/img/TechnoidSystemsGrayscale.png" class="d-block mx-lg-auto img-fluid" alt="Tech-Noid Systems Logo" width="400" height="400" loading="lazy">
+                        <img src="assets/img/TechnoidSystemsGrayscale.png" class="d-block mx-lg-auto img-fluid" alt="Tech-Noid Systems Logo" width="300" height="300" loading="lazy">
                     </div>
                     <div class="col-lg-6">
                         <h1 class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</h1>
-                        <p class="lead">"Bass Music - 24x7"
-                            <br><br>
-                            Streaming platform uses Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of js and PHP on the backend.<br>
-                            Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.<br>
-                            Container images are created automatically via CircleCI and are built utilizing BuildKit for multiarch containters.<br>
-                            The hosting infrastructure is self-built.  We're using ubuntu, kubernetes, containerd, cert-manager, Let's Encrypt SSL, nginx and HAproxy for the bulk of things.
-                        </p>
+                        <p class="lead">"Bass Music - 24x7"</p>
+                        <ul class="text-start"> 
+                            <li>Original streaming platform used Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of javascript and PHP on the backend.</li>
+                            <li>Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.</li>
+                            <li>Container images created via CircleCI and are built utilizing BuildKit for multiarch containters.</li>
+                            <li>The hosting infrastructure is self-built: Ubuntu LTS, kubernetes, containerd, cert-manager, Let's Encrypt SSL (auto-generating), nginx-ingress and HAproxy for the bulk of things.</li>
+                        </ul>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                             <!-- Facebook -->
                             <a class="btn btn-outline-light btn-floating s-1 social-button social-button-facebook" href="https://www.facebook.com/TechNoidSystems/" target="_blank" role="button" data-toggle="tooltip" title="Follow TNS on Facebook">
@@ -147,7 +143,7 @@
         </div>
     </main>
     <!-- Footer -->
-    <footer class="footer text-center text-lg-start bg-light">
+    <footer class="footer text-center text-lg-start bg-light border-top">
         <!-- Copyright -->
         <div class="text-center p-4 text-muted">
             © 2021 Copyright
