add links in the TNS website chunk
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/app/index.html
+++ b/app/index.html
@@ -116,13 +116,15 @@
             <div class="container col-xxl-8 px-4 py-5">
                 <div class="row flex-lg-row align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="assets/img/TechnoidSystemsGrayscale.png" class="d-block mx-lg-auto img-fluid" alt="Tech-Noid Systems Logo" width="300" height="300" loading="lazy">
+                        <a href="https://tech-noid.net/" target="_blank" class="text-dark text-decoration-none">
+                            <img src="assets/img/TechnoidSystemsGrayscale.png" class="d-block mx-lg-auto img-fluid" alt="Tech-Noid Systems Logo" width="300" height="300" loading="lazy">
+                        </a>
                     </div>
                     <div class="col-lg-6">
-                        <h1 class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</h1>
+                        <a href="https://emotionalsupportpizza.com/" target="_blank"  class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</a>
                         <p class="lead">"Bass Music - 24x7"</p>
                         <ul class="text-start"> 
-                            <li>Original streaming platform used Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of javascript and PHP on the backend.</li>
+                            <li>Streaming platform used Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of javascript and PHP on the backend.</li>
                             <li>Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.</li>
                             <li>Container images created via CircleCI and are built utilizing BuildKit for multiarch containters.</li>
                             <li>The hosting infrastructure is self-built: Ubuntu LTS, kubernetes, containerd, cert-manager, Let's Encrypt SSL (auto-generating), nginx-ingress and HAproxy for the bulk of things.</li>
