--- a/app/index.html
+++ b/app/index.html
@@ -121,7 +121,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a href="https://emotionalsupportpizza.com/" target="_blank"  class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</a>
+                        <a href="https://tech-noid.net/" target="_blank"  class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</a>
                         <p class="lead">"Bass Music - 24x7"</p>
                         <ul class="text-start"> 
                             <li>Streaming platform used Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of javascript and PHP on the backend.</li>
