updates to the copywrite on the the page
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/app/index.html
+++ b/app/index.html
@@ -52,9 +52,11 @@
             <div class="row">
                 <div class="container col-xxl-8 px-4 py-5 border-bottom ">
                     <p>
-                        Thanks for stopping in.<br />
-                        Expect many updates to this site over the coming weeks and months.<br />
-                        <br /><br /><br />
+                        Halftime, Autonomic, Greyarea, Techno and Bass Music DJ <br>   
+                        Founder of Bass Music collective Tech-Noid Systems <br>
+                        Co-Owner of Emotional Support Pizza <br>
+                        Site Reliability Engineering Manager <br>
+                        <br><br>
                         I can be found on the following social platforms:<br>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                             <!-- Instagram -->
@@ -74,8 +76,7 @@
                                 <i class="fab fa-soundcloud"></i>
                             </a>
                         </div>
-                        <br><br>
-                        In the meantime, please checkout the following projects I have developed in my spare time.
+                        <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1342914016&color=%23c9622e&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/mrcupp" title="MrCupp aka disfigure" target="_blank" style="color: #cccccc; text-decoration: none;">MrCupp aka disfigure</a> · <a href="https://soundcloud.com/mrcupp/sets/my-tech-noid-system-mixes" title="Tech-Noid System Mixes" target="_blank" style="color: #cccccc; text-decoration: none;">Tech-Noid System Mixes</a></div>                        <br><br>
                     </p>
                 </div>
             </div>
@@ -148,8 +149,7 @@
     <footer class="footer text-center text-lg-start bg-light border-top">
         <!-- Copyright -->
         <div class="text-center p-4 text-muted">
-            © 2021 Copyright
-            <a href="https://mrcupp.com/">IamMrCupp</a>
+            © 1981-2022 <a href="https://mrcupp.com/">IamMrCupp</a>
         </div>
         <!-- End Copyright -->
     </footer>
