update the layout a bit
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/app/index.html
+++ b/app/index.html
@@ -80,8 +80,38 @@
                     </p>
                 </div>
             </div>
+            <!-- Shill for TNS Here -->
+            <div class="container col-xxl-8 px-4 py-5">
+                <div class="row flex-lg-row align-items-center g-5 py-5 border-bottom">
+                    <div class="col-10 col-sm-8 col-lg-6">
+                        <a href="https://tech-noid.net/" target="_blank" class="text-dark text-decoration-none">
+                            <img src="assets/img/TechnoidSystemsGrayscale.png" class="d-block mx-lg-auto img-fluid" alt="Tech-Noid Systems Logo" width="300" height="300" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a href="https://tech-noid.net/" target="_blank"  class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</a>
+                        <p class="lead">"Bass Music - 24x7"</p>
+                        <ul class="text-start"> 
+                            <li>Streaming platform used Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of javascript and PHP on the backend.</li>
+                            <li>Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.</li>
+                            <li>Container images created via CircleCI and are built utilizing BuildKit for multiarch containters.</li>
+                            <li>The hosting infrastructure is self-built: Ubuntu LTS, kubernetes, containerd, cert-manager, Let's Encrypt SSL (auto-generating), nginx-ingress and HAproxy for the bulk of things.</li>
+                        </ul>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+                            <!-- Facebook -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-facebook" href="https://www.facebook.com/TechNoidSystems/" target="_blank" role="button" data-toggle="tooltip" title="Follow TNS on Facebook">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <!-- Github -->
+                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-github" href="https://github.com/Tech-Noid-Systems/" target="_blank" role="button" data-toggle="tooltip" title="Follow TNS on GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Shill For ESP Here -->
-            <div class="container col-xxl-8 px-4 py-5 border-bottom">
+            <div class="container col-xxl-8 px-4 py-5">
                 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
                         <a href="https://emotionalsupportpizza.com/" target="_blank" class="text-dark text-decoration-none">
@@ -112,44 +142,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- Shill for TNS Here -->
-            <div class="container col-xxl-8 px-4 py-5">
-                <div class="row flex-lg-row align-items-center g-5 py-5">
-                    <div class="col-10 col-sm-8 col-lg-6">
-                        <a href="https://tech-noid.net/" target="_blank" class="text-dark text-decoration-none">
-                            <img src="assets/img/TechnoidSystemsGrayscale.png" class="d-block mx-lg-auto img-fluid" alt="Tech-Noid Systems Logo" width="300" height="300" loading="lazy">
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <a href="https://tech-noid.net/" target="_blank"  class="fw-bold lh-1 mb-3 h1 text-dark text-decoration-none">Tech-Noid Systems</a>
-                        <p class="lead">"Bass Music - 24x7"</p>
-                        <ul class="text-start"> 
-                            <li>Streaming platform used Shoutcast, icecast, SAM Broadcaster, tcl and PAL scripting with a smattering of javascript and PHP on the backend.</li>
-                            <li>Website was developed using Bootstrap 5, SASS, node.js, and fontawesome.</li>
-                            <li>Container images created via CircleCI and are built utilizing BuildKit for multiarch containters.</li>
-                            <li>The hosting infrastructure is self-built: Ubuntu LTS, kubernetes, containerd, cert-manager, Let's Encrypt SSL (auto-generating), nginx-ingress and HAproxy for the bulk of things.</li>
-                        </ul>
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                            <!-- Facebook -->
-                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-facebook" href="https://www.facebook.com/TechNoidSystems/" target="_blank" role="button" data-toggle="tooltip" title="Follow TNS on Facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <!-- Github -->
-                            <a class="btn btn-outline-light btn-floating s-1 social-button social-button-github" href="https://github.com/Tech-Noid-Systems/" target="_blank" role="button" data-toggle="tooltip" title="Follow TNS on GitHub">
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div> 
         </div>
     </main>
     <!-- Footer -->
     <footer class="footer text-center text-lg-start bg-light border-top">
         <!-- Copyright -->
         <div class="text-center p-4 text-muted">
-            © 1981-2022 <a href="https://mrcupp.com/">IamMrCupp</a>
+            © 2022 <a href="https://mrcupp.com/">IamMrCupp</a>
         </div>
         <!-- End Copyright -->
     </footer>
